--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rxjs_000",
+  "name": "boilerplate_RxTsPugStylPack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
